--- a/backend/env.example
+++ b/backend/env.example
@@ -37,3 +37,25 @@ PINECONE_INDEX_NAME=your_pinecone_index_name
 OPENAI_API_KEY=your_openai_api_key
 # Defaults to text-embedding-3-small when unset
 # OPENAI_EMBEDDING_MODEL=text-embedding-ada-002
+
+# Gmail OAuth Configuration
+# Your credentials (add these to your .env file):
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+# Redirect URI for Gmail OAuth callback
+# ⚠️ IMPORTANT: Add this EXACT URL to Google Console → OAuth 2.0 Client → Authorized redirect URIs
+# Development: http://localhost:3001/api/gmail/callback
+# Production: https://your-backend-url.com/api/gmail/callback
+GOOGLE_REDIRECT_URI=http://localhost:3001/api/gmail/callback
+# Frontend URL for redirects after OAuth
+FRONTEND_URL=http://localhost:5173
+# Backend URL (for production)
+BACKEND_URL=http://localhost:3001
+
+# Gmail Real-time Configuration (Pub/Sub)
+# Google Cloud Project ID (required for Gmail watch)
+GOOGLE_PROJECT_ID=your-project-id
+# Gmail Pub/Sub Topic (optional, will use default if not set)
+GMAIL_TOPIC=projects/your-project-id/topics/gmail-notifications
+# External webhook URL for email notifications
+EXTERNAL_WEBHOOK_URL=https://auto.nsolbpo.com/webhook/pa-email
