--- a/backend/package.json
+++ b/backend/package.json
@@ -18,27 +18,30 @@
   },
   "dependencies": {
     "@hapi/boom": "^10.0.1",
+    "@pinecone-database/pinecone": "^3.0.1",
     "@supabase/supabase-js": "^2.75.0",
     "@whiskeysockets/baileys": "^6.7.9",
-    "axios": "^1.12.2",
-    "csv-parse": "^5.5.3",
-    "@pinecone-database/pinecone": "^3.0.1",
-    "pdf-parse": "^1.1.1",
-    "mammoth": "^1.6.0",
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csv-parse": "^5.5.3",
     "dotenv": "^16.0.3",
     "exceljs": "^4.4.0",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "express-rate-limit": "^8.1.0",
+    "googleapis": "^166.0.0",
     "jsonwebtoken": "^9.0.0",
+    "mammoth": "^1.6.0",
     "multer": "^1.4.5-lts.1",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.16.3",
     "pino": "^8.21.0",
     "pino-pretty": "^10.2.0",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
+    "socket.io": "^4.8.1",
+    "ts-node": "^10.9.2",
     "vcf": "^2.1.1",
     "zod": "^4.1.12"
   },
